<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/itN1"
        android:enabled="true"
        android:icon="@drawable/flickr"
        android:title="@string/add"
        android:visible="true" />
    <item
        android:id="@+id/itN2"
        android:enabled="true"
        android:icon="@drawable/icofx"
        android:title="@string/search"
        android:visible="true" />
    <item
        android:id="@+id/itN3"
        android:enabled="true"
        android:icon="@drawable/powerdvd"
        android:title="@string/edit"
        android:visible="true" />
    <item
        android:id="@+id/itN4"
        android:enabled="true"
        android:icon="@drawable/winamp"
        android:title="@string/delete"
        android:visible="true" />
    <item
        android:id="@+id/itN5"
        android:enabled="true"
        android:icon="@drawable/zune"
        android:title="@string/action_settings"
        android:visible="true" />
</menu>